--- a/TitlesOrganizer.Web/Views/Books/Authors.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Authors.cshtml
@@ -5,37 +5,158 @@
 }
 
 <h1>Authors</h1>
-<div class="container">
-    <div class="row row-cols-2 row-cols-lg-4 row-cols-md-3 g-2 g-lg-3">
-    @foreach (var author in Model.Values)
-    {
-        <div class="col-6 card p-3 border-0">
-            <button class="card-body btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target=@("#modalDetails_" + author.Id)>
-                <h5 class="card-title">@author.Description</h5>
-            </button>
 
-            <div class="modal fade" id=@("modalDetails_" + author.Id) tabindex="-1" aria-labelledby="@("modalDetailsLabel_" + author.Id)" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id=@("modalDetailsLabel_" + author.Id)>@author.Description</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+<form asp-action="Authors" asp-controller="Books" method="post">
+    <div class="row">
+        <div class="mb-1">
+            <button class="btn btn-primary d-md-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">Toggle filters</button>
+        </div>
+        <div class="offcanvas-md offcanvas-start" tabindex="-1" id="offcanvasResponsive" aria-labelledby="offcanvasResponsiveLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasResponsiveLabel">Filters</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <div class="container list-group list-group-horizontal-md">
+                    <div class="list-group-item flex-fill bg-body-tertiary border-0">
+                        <select class="form-select" name="sortBy" asp-for="Filtering.SortBy" asp-items="Html.GetEnumSelectList<TitlesOrganizer.Application.ViewModels.Helpers.SortByEnum>()" onchange="javascript:Submit();"></select>
+                    </div>
+                    <div class="list-group-item flex-fill bg-body-tertiary border-0">
+                        <select class="form-select" name="pageSize" asp-for="Paging.PageSize" onchange="javascript:Submit();" action="/Books/Index">
+                            <option value="3">3 authors on page</option>
+                            <option value="5">5 authors on page</option>
+                            <option value="10">10 authors on page</option>
+                            <option value="15">15 authors on page</option>
+                            <option value="20">20 authors on page</option>
+                            <option value="50">50 authors on page</option>
+                            <option value="100">100 authors on page</option>
+                        </select>
+                    </div>
+                    <div class="list-group-item flex-fill bg-body-tertiary border-0">
+                        <div class="input-group">
+                            <input class="form-control" type="search" asp-for="Filtering.SearchString" name="searchString" id="searchString" placeholder="Search..." onchange="javascript:Submit();" />
+                            <input type="submit" class="btn btn-outline-secondary float-start" value="Search" />
                         </div>
-                       @* <div class="modal-body">
-                            <h5>Books</h5>
-                            <ul class="list-group list-group-flash" style="text-align:left;">
-                                @foreach (var book in author.Books)
-                                {
-                                    <li class="list-group-item">
-                                        <a asp-action="Details" asp-route-id=@book.Id>@book.Title</a>
-                                    </li>
-                                }
-                            </ul>
-                        </div>*@
                     </div>
                 </div>
             </div>
         </div>
-    }
+    </div>
+    <p class="row">
+        <a asp-action="AuthorUpsert" class="col">Create New</a>
+    </p>
+    <div class="row">
+        <table class="table" id="AuthorsGrid">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var author in Model.Values)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => author.Description)</td>
+                        <td>
+                            @Html.ActionLink("Edit", "AuthorUpsert", new { id = author.Id }) |
+                            <a class="details" href="javascript:ShowDetails(@author.Id);">Details</a> |
+                            @Html.ActionLink("Delete", "AuthorDelete", new { id = author.Id })
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <div class="row justify-content-center">
+        @{
+            var pages = Math.Ceiling(Model.Paging.Count / (double)Model.Paging.PageSize);
+            int numbersNextTo = 2;
+        }
+        <nav aria-label="...">
+            <ul class="pagination">
+                @if (Model.Paging.CurrentPage > numbersNextTo + 1)
+                {
+                    <li class="page-item">
+                        <a class="page-link" href="javascript:PagerClick(@(Model.Paging.CurrentPage - numbersNextTo - 1))" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                }
+                @for (int i = numbersNextTo; i >= 1; i--)
+                {
+                    if (i < Model.Paging.CurrentPage)
+                    {
+                        <li class="page-item"><a class="page-link" href="javascript:PagerClick(@(Model.Paging.CurrentPage - i))">@(Model.Paging.CurrentPage - i)</a></li>
+                    }
+                }
+                @if (pages > 1)
+                {
+                    <li class="page-item active" aria-current="page">
+                        <span class="page-link">@Model.Paging.CurrentPage</span>
+                    </li>
+                }
+                @for (int i = 1; i <= numbersNextTo && Model.Paging.CurrentPage + i <= pages; i++)
+                {
+                    <li class="page-item"><a class="page-link" href="javascript:PagerClick(@(Model.Paging.CurrentPage + i))">@(Model.Paging.CurrentPage + i)</a></li>
+                }
+                @if (Model.Paging.CurrentPage + numbersNextTo + 1 <= pages)
+                {
+                    <li class="page-item">
+                        <a class="page-link" href="javascript:PagerClick(@(Model.Paging.CurrentPage + numbersNextTo + 1))" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                }
+            </ul>
+        </nav>
+        <input type="hidden" name="pageNo" id="pageNo" />
+    </div>
+</form>
+
+<div id="partialModal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
     </div>
 </div>
+@section Scripts {
+    <script type="text/javascript">
+        function PagerClick(index) {
+            document.getElementById("pageNo").value = index;
+            Submit();
+        }
+
+        function Submit() {
+            document.forms[0].submit();
+        }
+
+        function ShowDetails(id) {
+            console.log(id);
+            $.post("/Books/AuthorDetails", { "id": id })
+                .done(function (response) {
+                    $("#partialModal").find(".modal-body").html(response);
+                    $("#partialModal").modal('show');
+                })
+                .fail(function (response) {
+                    alert(response.responseText);
+                });
+        }
+        function BooksPagerClick(index) {
+            document.getElementById("booksPageNo").value = index;
+            SubmitBooks();
+        }
+
+        function SubmitBooks() {
+            $("#BooksForm").submit();
+        }
+    </script>
+}
