--- a/TitlesOrganizer.Web/Views/Books/Books.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Books.cshtml
@@ -6,12 +6,6 @@
 
 <h1>Books</h1>
 
-<p class="row">
-    <a href="/Books/CreateNew" class="col">Create New</a>
-    <a asp-action="Authors" class="col">See Authors</a>
-    <a asp-action="Genres" class="col">See Genres</a>
-    <a asp-action="Series" class="col">See Book Series</a>
-</p>
 <form asp-action="Books" asp-controller="Books" method="post">
     <div class="row">
         <div class="mb-1">
@@ -28,7 +22,7 @@
                         <select class="form-select" name="sortBy" asp-for="Filtering.SortBy" asp-items="Html.GetEnumSelectList<TitlesOrganizer.Application.ViewModels.Helpers.SortByEnum>()" onchange="javascript:Submit();"></select>
                     </div>
                     <div class="list-group-item flex-fill bg-body-tertiary border-0">
-                        <select class="form-select" name="pageSize" asp-for="Paging.PageSize" onchange="javascript:Submit();" action="/Books/Index">
+                        <select class="form-select" name="pageSize" asp-for="Paging.PageSize" onchange="javascript:Submit();" action="/Books/Books">
                             <option value="3">3 books on page</option>
                             <option value="5">5 books on page</option>
                             <option value="10">10 books on page</option>
@@ -48,6 +42,9 @@
             </div>
         </div>
     </div>
+    <p class="row">
+        <a href="/Books/CreateNew" class="col">Create New</a>
+    </p>
     <div class="row">
         <table class="table" id="BooksGrid">
             <thead>
@@ -59,11 +56,10 @@
             <tbody>
             @foreach (var book in Model.Values) {
                 <tr>
-                    <input type="hidden" value="@book.Id">
                     <td>@Html.DisplayFor(modelItem => book.Description)</td>
                     <td>
                         <a href=@($"/Books/Update/{book.Id}")>Edit</a> |
-                        <a class="details" href="javascript:;">Details</a> |
+                        <a class="details" href="javascript:ShowDetails(@book.Id);">Details</a> |
                         @Html.ActionLink("Delete", "Delete", new { id = book.Id })
                     </td>
                 </tr>
@@ -118,18 +114,15 @@
 </form>
 
 <div id="partialModal" class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Customer Details Form</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
@@ -140,22 +133,21 @@
             document.getElementById("pageNo").value = index;
             Submit();
         }
+
         function Submit(){
             document.forms[0].submit();
         }
-        $(function () {
-            $("#BooksGrid .details").click(function () {
-                var bookId = $(this).closest("tr").find("input")[0].value;
-                console.log(bookId);
-                $.post("/Books/BookDetails", { "id": bookId })
-                .done(function (response) {
-                    $("#partialModal").find(".modal-body").html(response);
-                    $("#partialModal").modal('show');
-                })
-                .fail(function (response) {
-                    alert(response.responseText);
-                });
+
+        function ShowDetails(id) {
+            console.log(id);
+            $.post("/Books/BookDetails", { "id": id })
+            .done(function (response) {
+                $("#partialModal").find(".modal-body").html(response);
+                $("#partialModal").modal('show');
+            })
+            .fail(function (response) {
+                alert(response.responseText);
             });
-        });
+        }
     </script>
 }
