--- a/TitlesOrganizer.Web/Views/Books/Authors.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Authors.cshtml
@@ -49,7 +49,7 @@
         <table class="table" id="AuthorsGrid">
             <thead>
                 <tr>
-                    <th>Title</th>
+                    <th>Full name</th>
                     <th></th>
                 </tr>
             </thead>
@@ -141,7 +141,7 @@
 
         function ShowDetails(id) {
             console.log(id);
-            $.post("/Books/AuthorDetails", { "id": id })
+            $.post("/Books/AuthorDetailsPartial", { "id": id })
                 .done(function (response) {
                     $("#partialModal").find(".modal-body").html(response);
                     $("#partialModal").modal('show');
@@ -150,13 +150,6 @@
                     alert(response.responseText);
                 });
         }
-        function BooksPagerClick(index) {
-            document.getElementById("booksPageNo").value = index;
-            SubmitBooks();
-        }
-
-        function SubmitBooks() {
-            $("#BooksForm").submit();
-        }
     </script>
+    <script type="text/javascript" src="~/js/Books/AuthorDetailsScript.js"></script>
 }
