--- a/TitlesOrganizer.Web/Views/Books/_GenresPartial.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/_GenresPartial.cshtml
@@ -1,40 +1,36 @@
-﻿@model TitlesOrganizer.Application.ViewModels.Abstract.IPartialList<TitlesOrganizer.Domain.Models.Book>
-<form asp-action="BooksPartial" method="post" id="BooksForm">
+﻿@model TitlesOrganizer.Application.ViewModels.Abstract.IPartialList<TitlesOrganizer.Domain.Models.LiteratureGenre>
+<form asp-action="GenresPartial" method="post" id="GenresForm">
     <div class="card w-100">
         <div class="card-header d-flex w-100 justify-content-between mb-1 bg-body-tertiary border-0 align-items-center">
-            <h5>Books</h5>
+            <h5>Genres</h5>
             <span>
-                <select class="form-select" name="booksPageSize" id="booksPageSize" asp-for="Paging.PageSize" onchange="javascript:ReloadBooks();">
-                    <option value="1">1 book on page</option>
-                    <option value="3">3 books on page</option>
-                    <option value="5">5 books on page</option>
-                    <option value="10">10 books on page</option>
-                    <option value="15">15 books on page</option>
-                    <option value="20">20 books on page</option>
-                    <option value="50">50 books on page</option>
-                    <option value="100">100 books on page</option>
+                <select class="form-select" name="genresPageSize" id="genresPageSize" asp-for="Paging.PageSize" onchange="javascript:ReloadGenres();">
+                    <option value="1">1 genre on page</option>
+                    <option value="3">3 genres on page</option>
+                    <option value="5">5 genres on page</option>
+                    <option value="10">10 genres on page</option>
+                    <option value="15">15 genres on page</option>
+                    <option value="20">20 genres on page</option>
+                    <option value="50">50 genres on page</option>
+                    <option value="100">100 genres on page</option>
                 </select>
             </span>
         </div>
-        @if (Model.Paging.Count > 0)
-        {
-            <ul class="list-group list-group-flush">
-                @foreach (var book in Model.Values)
+        <div class="card-body">
+            @if (Model.Paging.Count > 0)
+            {
+                @foreach (var genre in Model.Values)
                 {
-                    <li class="list-group-item list-group-item-action">
-                        <a type="button" asp-action="BookDetails" asp-route-id="@book.Id">
-                            @book.Description
-                        </a>
-                    </li>
+                    <a type="button" asp-action="GenreDetails" asp-route-id="@genre.Id" class="btn btn-primary m-1">
+                        @genre.Description
+                    </a>
                 }
-            </ul>
-        }
-        else
-        {
-            <div class="card-body">
-                <small><i>No associated books</i></small>
-            </div>
-        }
+            }
+            else
+            {
+                <small><i>No associated genres</i></small>
+            }
+        </div>
         <div class="card-footer justify-content-center">
             @{
                 var pages = Math.Ceiling(Model.Paging.Count / (double)Model.Paging.PageSize);
@@ -45,7 +41,7 @@
                     @if (Model.Paging.CurrentPage > numbersNextTo + 1)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:BooksPagerClick(@(Model.Paging.CurrentPage - numbersNextTo - 1))" aria-label="Previous">
+                            <a class="page-link" href="javascript:GenresPagerClick(@(Model.Paging.CurrentPage - numbersNextTo - 1))" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                             </a>
                         </li>
@@ -55,7 +51,7 @@
                         if (i < Model.Paging.CurrentPage)
                         {
                             <li class="page-item">
-                                <a class="page-link" href="javascript:BooksPagerClick(@(Model.Paging.CurrentPage - i))">
+                                <a class="page-link" href="javascript:GenresPagerClick(@(Model.Paging.CurrentPage - i))">
                                     @(Model.Paging.CurrentPage - i)
                                 </a>
                             </li>
@@ -70,7 +66,7 @@
                     @for (int i = 1; i <= numbersNextTo && Model.Paging.CurrentPage + i <= pages; i++)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:BooksPagerClick(@(Model.Paging.CurrentPage + i))">
+                            <a class="page-link" href="javascript:GenresPagerClick(@(Model.Paging.CurrentPage + i))">
                                 @(Model.Paging.CurrentPage + i)
                             </a>
                         </li>
@@ -78,14 +74,14 @@
                     @if (Model.Paging.CurrentPage + numbersNextTo + 1 <= pages)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:BooksPagerClick(@(Model.Paging.CurrentPage + numbersNextTo + 1))" aria-label="Next">
+                            <a class="page-link" href="javascript:GenresPagerClick(@(Model.Paging.CurrentPage + numbersNextTo + 1))" aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                             </a>
                         </li>
                     }
                 </ul>
             </nav>
-            <input type="hidden" name="booksPageNo" id="booksPageNo" />
+            <input type="hidden" name="genresPageNo" id="genresPageNo" />
         </div>
     </div>
 </form>
